fix spacing aroung logos in mobile site

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,6 +14,7 @@
 .funding {
   width: auto;
   height: 5vh;
+  margin: 1vh;
 }
 
 .news h3,
